--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
     <article>
       <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
       <time>{{ .Date.Format "January 2, 2006" }}</time>
-      <p>{{ .Summary }}</p>
+      <p>{{ .Summary | truncate 100 }}</p>
     </article>
   {{ end }}
 </div>
