--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,21 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ .Title }} | {{ .Site.Title }}</title>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css">
 </head>
 <body>
     <header>
-        <h1><a href="/">{{ .Site.Title }}</a></h1>
-        <nav>
-            {{ range .Site.Menus.main }}
-            <a href="{{ .URL }}">{{ .Name }}</a>
-            {{ end }}
-        </nav>
+        {{ if .IsHome }}
+            <h1>{{ .Site.Title }}</h1>
+        {{ else }}
+            <h1><a href="/">{{ .Site.Title }}</a></h1>
+        {{ end }}
     </header>
     <main>
         {{ block "main" . }}{{ end }}
     </main>
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js" onload="renderMathInElement(document.body);"></script>
 </body>
 </html>
