--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,3 +27,43 @@ nav {
 nav a {
     margin-right: 1rem;
 }
+
+#about ul {
+    margin-left: 20px;
+}
+
+#recent-posts {
+    margin-top: 2rem;
+}
+
+#recent-posts .post-list {
+    margin-top: 1rem;
+}
+
+#recent-posts .post-item {
+    margin-bottom: 0.5rem;
+}
+
+#recent-posts .post-date {
+    font-size: 0.9em;
+    color: #666;
+    margin-right: 1rem;
+}
+
+#recent-posts a {
+    text-decoration: none;
+    color: #333;
+}
+
+#recent-posts a:hover {
+    text-decoration: underline;
+}
+
+header h1 a {
+    color: inherit;
+    text-decoration: none;
+}
+
+header h1 a:hover {
+    text-decoration: underline;
+}
