--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,12 +1,11 @@
 {{ define "main" }}
-<div class="container">
-  <h1>{{ .Title }}</h1>
+<h1>{{ .Title }}</h1>
+<ul class="post-list">
   {{ range .Pages }}
-    <article>
-      <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-      <time>{{ .Date.Format "January 2, 2006" }}</time>
-      <p>{{ .Summary | truncate 100 }}</p>
-    </article>
+    <li class="post-item">
+      <span class="post-date">{{ .Date.Format "2006-01" }}</span>
+      <a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a>
+    </li>
   {{ end }}
-</div>
+</ul>
 {{ end }}
