--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,12 +8,12 @@ body {
 }
 
 a {
-    color: #0000FF;
-    text-decoration: none;
+    color: inherit;
+    text-decoration: underline;
 }
 
 a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 header {
@@ -28,7 +28,12 @@ nav a {
     margin-right: 1rem;
 }
 
-#about ul {
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+
+ul {
     margin-left: 20px;
 }
 
@@ -36,34 +41,16 @@ nav a {
     margin-top: 2rem;
 }
 
-#recent-posts .post-list {
-    margin-top: 1rem;
-}
-
-#recent-posts .post-item {
+.post-item {
     margin-bottom: 0.5rem;
 }
 
-#recent-posts .post-date {
+.post-date {
     font-size: 0.9em;
     color: #666;
     margin-right: 1rem;
 }
 
-#recent-posts a {
-    text-decoration: none;
-    color: #333;
-}
-
-#recent-posts a:hover {
-    text-decoration: underline;
-}
-
 header h1 a {
-    color: inherit;
     text-decoration: none;
-}
-
-header h1 a:hover {
-    text-decoration: underline;
 }
